<resources>
    <string name="app_name">WTFIMM</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_description_startofmonth" />
    <string name="pref_title_startofmonth">Start of Month</string>

    <string name="pref_title_categorizer_enable">Enable SMS</string>

    <string name="pref_title_categorizer_sender">Sender</string>
    <string name="pref_description_categorizer_sender">Enable scanning incoming Short Texts</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="not_logged_in">Not logged in</string>

    <string name="title_activity_login">Sign In</string>


    <!-- Firebase -->
    <string name="desc_firebase_lockup">Firebase logo and name</string>


    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>


    <!-- Edit transaction -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="editTransaction">Edit</string>
    <string name="createTransaction">Create</string>
    <string name="create">Create</string>
    <string name="edit_note_hint">Note</string>
    <string name="edit_source_hint">Source</string>
    <string name="edit_target_hint">Target</string>
    <string name="edit_amount_hint">Amount</string>
    <string name="edit_date_hint">Date</string>

    <!-- Menu items -->
    <string name="menu_transaction">Transactions</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_budgets">Budgets</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_title_sep_format">Transaction List Separator Format</string>
    <string name="pref_title_time_format">Time Format</string>
    <string name="edit_balance_hint">Balance</string>
    <string name="pref_title_categorizer">Data Collection</string>
    <string name="pref_title_datetimeformat">Date and time formatting</string>

</resources>
