<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_overview"
            android:title="@string/menu_overview"
            android:icon="@drawable/ic_dashboard_black_24dp"/>
        <item
            android:id="@+id/menu_transactions"
            android:title="@string/menu_transaction"
            android:icon="@drawable/ic_compare_arrows_black_24dp"/>
        <item
            android:id="@+id/menu_accounts"
            android:title="@string/menu_accounts"
            android:icon="@drawable/ic_account_balance_black_24dp"/>
        <item
            android:id="@+id/menu_categories"
            android:title="@string/menu_categories"
            android:icon="@drawable/ic_toc_black_24dp"/>
        <item
            android:id="@+id/menu_budgets"
            android:title="@string/menu_budgets"
            android:icon="@drawable/ic_info_black_24dp"/>

    </group>
    <item android:title="@string/action_settings">
        <menu>
            <item android:id="@+id/settings"
                android:title="@string/action_settings"
                android:icon="@drawable/ic_settings_black_24dp"/>
            <item android:id="@+id/sign_out_button"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/sign_out" />
            <item android:id="@+id/disconnect_button"
                android:icon="@drawable/ic_delete_black_24dp"
                android:title="@string/disconnect" />
        </menu>
    </item>
</menu>
