<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_date"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:hint="@string/edit_date_hint"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/edit_amount_hint"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        style="@style/InputLabel"
        android:id="@+id/source_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_source_hint"/>
    <Spinner
        android:id="@+id/source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SpinnerUnderlined" />

    <TextView
        style="@style/InputLabel"
        android:id="@+id/target_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_target_hint"/>
    <Spinner
        android:id="@+id/target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_target_hint"
        style="@style/SpinnerUnderlined" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputEditText
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_note_hint"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>